@@ -1,3 +1,10 @@
+2004-02-24 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b56
+
+	* Fix: _() was not used correct in delete_photo
+
+	* Change: Switched back to former .sh scripts as the 
+	          Debian Package Maintainer uses his own version.
+
 2004-02-24  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b55
 
 	* Fixed bug #903434: add_photos_frame.php was not using makeGalleryUrl
